# ST2CPP

./: .gitignore  .gitmodules  AGENTS.md  AGENTS.md.bak  CONTRIBUTING.md  Makefile  README.md  build.bat  build.ps1  compiler-to-runtime.md  st-support.md  tasks.json  test-flat.bat  test.bat  tools_download.ps1
.github/workflows/: ci.yml
.mimocode/plans/: 1782453724570-misty-otter.md
.mimocode/skills/st2c-add-test/: SKILL.md
.mimocode/skills/st2c-full-build/: SKILL.md
.opencode/plans/: ST2C调试系统方案v1.1.md
Runtime/lib/: CMakeLists.txt  PLC.h  PLC_Type_Dict.cpp  PLC_Value.cpp  PLC_Value.h
Runtime/lib/PLC_ARRAY/: PLC_Array_Type.hpp  PLC_Array_Value.hpp
Runtime/lib/PLC_CLASS/: PLC_Class.h  PLC_Translated_Class.h
Runtime/lib/PLC_ENUM/: PLC_Enum_Type.hpp  PLC_Enum_Value.hpp
Runtime/lib/PLC_Function/: PLC_Function.h  PLC_Translated_Function.h
Runtime/lib/PLC_INNER/: PLC_Inner_Type.h  PLC_Inner_Value.cpp
Runtime/lib/PLC_INNER/PLC_INTEGER/: PLC_DINT_Type.h  PLC_INT_Value.h  PLC_Integer_Type.hpp  PLC_LREAL_Value.h  PLC_Real_Type.h  PLC_SINT_Type.h  PLC_ULINT_Type.h  PLC_USINT_Value.h
Runtime/lib/PLC_INNER/PLC_STRING/: PLC_BasicString_Type.hpp  PLC_WString_Type.h  PLC_WString_Value.h
Runtime/lib/PLC_INTERFACE/: PLC_INTERFACE.h  PLC_INTERFACE_Translate.h
Runtime/lib/PLC_Method/: PLC_Method.h
Runtime/lib/PLC_STRUCT/: PLC_Struct_FieldInfo.cpp  PLC_Struct_Type.hpp
Runtime/lib/PLC_SUBTYPE/: PLC_Subtype_Type.hpp
Runtime/lib/varMap/: varMap.cpp
Runtime/src/: CMakeLists.txt  main.cpp  测试样例.md
docs/: PLC运行时架构知识库.md  ST2C实时化改造方案.md  architecture.md  compiler-to-runtime.md  examples-index.md  runtime-api.md  st-language-support.md  target-deployment.md
examples/: duplicate_program.st  iec_stdlib.st  multi_input_1.st  multi_input_2.st  test_at_full.st  test_at_struct.st  test_case_hex.st  test_class.st  test_class_minimal.st  test_class_no_extend.st  test_class_simple.st  test_ctd.st  test_ctd2.st  test_enum.st  test_external.st  test_fb.st  test_fb_array_real.st  test_fb_array_simple.st  test_fb_basic.st  test_fb_call_methods.st  test_fb_comprehensive.st  test_fb_external.st  test_fb_init.st  test_fb_output.st  test_fb_simple.st  test_fb_var_external.st  test_fc_return.st  test_hex.st  test_ld.st  test_lexer.st  test_method_output.st  test_multi_fb.st  test_not_int.st  test_print.st  test_retain_simple.st  test_simple_fb.st  test_std_fb.st  test_struct.st  test_super.st  test_super_call.st  (+3 more)
examples/projects/hvac_controller/: compile.bat  io_config.st  main.st  pid_func.st  run.sh  types.st  zone_fb.st
examples/projects/lsp_test/: main.st  types.st  utils.st
examples/projects/robot_arm/: compile.bat  io_config.st  main.st  math_utils.st  motion_planner.st  robot_ctrl.st  safety.st  servo_drive.st  types.st
examples/projects/smart_factory/: base_controller.st  line_controller.st  main.st  motor_ctrl.st  sensor_ctrl.st  types.st  utils.st
examples/projects/syntax_tests/: __combined.st  demo_at.st  test_arr_struct.st  test_at.st  test_at_output_read.st  test_at_struct.st  test_at_var.st  test_bitwise.st  test_class.st  test_cross_file_type.st  test_debug_full.st  test_fb_array.st  test_fb_output.st  test_method_output.st  test_multidim.st  test_pre_post.st  test_to.st  test_tricky_mini.st
examples/projects/weather_station/: __combined.st  alarm_eval.st  comms_ctrl.st  compile.bat  data_logger.st  main.st  sensor_cal.st  types.st  utils.st
examples/st_source_code/: README.md
examples/st_source_code/actuator/: ACTUATOR_2P.ST  ACTUATOR_3P.ST  ACTUATOR_A.ST  ACTUATOR_COIL.ST  ACTUATOR_PUMP.ST  ACTUATOR_UD.ST  BLIND_ACTUATOR.ST  BLIND_CONTROL.ST  BLIND_CONTROL_S.ST  BLIND_INPUT.ST  BLIND_NIGHT.ST  BLIND_SCENE.ST  BLIND_SECURITY.ST  (+6 more)
java/: PLCSTLEXER.g4  PLCSTPARSER.g4  TESTING.md  pom.xml
java/docs/: TESTING.md
output/: test_fb_var_external.cpp
output/flat/: main.cpp  test.st.cpp  test_arr_struct.st.cpp  test_array.st.cpp  test_array_simple.st.cpp  test_assert.st.cpp  test_fb_var_external.cpp  test_print.st.cpp  test_registry_check.cpp  test_struct.st.cpp
output/oop/: main.cpp
rt-Runtime/: CMakeLists.txt  multitask_demo.cpp  rt_plc.h  rt_runtime.h
runtime-flat/: CMakeLists.txt  README.md  fibonacci.cpp  framework_test.cpp  generated_array.cpp  generated_main.cpp  generated_pou.cpp  platform_rpi.cpp  platform_stm32.cpp  rt_runtime.h  runtime_main.cpp  runtime_rpi.cpp  runtime_stm32.cpp
runtime-flat/docs/: README.md  TODO.md
runtime-flat/include/: rt_plc.h  rt_runtime.h  tcp_tci.h
runtime-flat/include/core/: constants.h  diag.h  diag_manager.h  error_manager.h  error_policy.h  event.h  gvl.h  io_manager.h  platform.h  program.h  registry.h  retain_manager.h  runtime_validator.h  task.h  task_executor.h  types.h  watchdog.h
runtime-flat/include/debug/: debug_if.h  repl_engine.h
runtime-flat/include/safety/: safety_module.h
runtime-flat/include/scheduler/: scheduler.h
runtime-flat/src/: debug_engine.cpp  diag.cpp  diag_manager.cpp  error_policy.cpp  event.cpp  gvl.cpp  io_manager.cpp  program.cpp  repl_engine.cpp  retain_manager.cpp  runtime_validator.cpp  scheduler.cpp  task.cpp  task_executor.cpp  watchdog.cpp
runtime-flat/tests/: debug_engine_test.cpp  error_manager_test.cpp  fb_test.cpp  fibonacci.cpp  framework_test.cpp  gvl_test.cpp  registry_test.cpp  runtime_integration_test.cpp  type_conversion_test.cpp
runtime-oop/: CMakeLists.txt  代码规范.md
runtime-oop/lib/: Debug.h  PLC_Object.cpp  PLC_Object.h  PLC_Type.cpp  PLC_Type.h  PLC_Type_Dict.h
runtime-oop/src/: main.cpp
test/: README.md  lsp_multi_test.ps1  lsp_multi_test.py  lsp_test.ps1  run_lsp.bat  test_lsp_pipe.bat  test_lsp_simple.ps1  test_pipe.ps1
test/tmp_lsp/: io_config.st  main.st  simple_types.st  types.st
tools/: README.md  debug_cli.cpp
tools/st2c-vscode-extension/: .vscodeignore  debugAdapter.js  extension.js  language-configuration.json  package-lock.json  package.json
vscode-st2c/: .vscodeignore  language-configuration.json  package.json
vscode-st2c/snippets/: st.json
vscode-st2c/src/: extension.ts
vscode-st2c/syntaxes/: st.tmLanguage.json
(+1056 files in other folders)
