cmake_minimum_required(VERSION 3.10)
project(RT_PLC LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ═══ 编译优化选项 ═══
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -march=native")

# ═══ 诊断开关 ═══
option(ENABLE_DIAG "Enable runtime diagnostics (scan time, watchdog)" ON)
if(ENABLE_DIAG)
    add_compile_definitions(ENABLE_DIAG)
endif()

# ═══ 目录结构 ═══
set(RT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(RT_SRC_DIR     ${CMAKE_CURRENT_SOURCE_DIR}/src)

# 公共头文件包含路径
include_directories(${RT_INCLUDE_DIR})

# ═══ 源文件列表 ═══
set(RT_CORE_SOURCES
    ${RT_SRC_DIR}/gvl.cpp
    ${RT_SRC_DIR}/program.cpp
    ${RT_SRC_DIR}/task.cpp
    ${RT_SRC_DIR}/event.cpp
    ${RT_SRC_DIR}/watchdog.cpp
    ${RT_SRC_DIR}/diag.cpp
)

set(RT_SCHEDULER_SOURCES
    ${RT_SRC_DIR}/scheduler.cpp
)

# ═══ 静态库：核心运行时 ═══
add_library(rt_core STATIC ${RT_CORE_SOURCES})
target_include_directories(rt_core PUBLIC ${RT_INCLUDE_DIR})

# ═══ 静态库：调度器 ═══
add_library(rt_scheduler STATIC ${RT_SCHEDULER_SOURCES})
target_include_directories(rt_scheduler PUBLIC ${RT_INCLUDE_DIR})
target_link_libraries(rt_scheduler PUBLIC rt_core)

# ═══ 可执行文件：测试用例 ═══

# Fibonacci 基础类型测试
add_executable(fibonacci tests/fibonacci.cpp)
target_link_libraries(fibonacci rt_core)

# 多任务调度演示
add_executable(multitask_demo tests/multitask_demo.cpp)
target_link_libraries(multitask_demo rt_scheduler)

# 框架完整性测试
add_executable(framework_test tests/framework_test.cpp)
target_link_libraries(framework_test rt_scheduler)

# 单元测试合集（doctest 框架，单目标编译，一次链接）
add_executable(unit_test
    tests/test_main.cpp
    tests/gvl_test.cpp
    tests/error_manager_test.cpp
    tests/fb_test.cpp
    tests/type_conversion_test.cpp
    tests/registry_test.cpp
)
target_link_libraries(unit_test rt_core)
target_include_directories(unit_test PRIVATE ${RT_INCLUDE_DIR} tests)
target_link_options(unit_test PRIVATE -mconsole)

# 运行时主程序（编译器生成代码 + 调度器）
add_executable(runtime_main runtime_main.cpp)
target_link_libraries(runtime_main rt_scheduler)

# ═══ 可执行文件：runtime（集成生成的 POU 代码） ═══

# 编译器生成的 .cpp 目录（由 Java 编译器产出，CMake 不参与 ST 编译）
set(GEN_CPP_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../output/flat/build"
    CACHE PATH "Directory containing generated POU .cpp files from Java compiler")
file(GLOB GEN_POU_FILES "${GEN_CPP_DIR}/*.cpp")

# 自动生成 pou_registry.gen.cpp（汇总所有 registerPOU_<fileId>() 调用）
set(POU_REGISTRY "${CMAKE_CURRENT_BINARY_DIR}/pou_registry.gen.cpp")
file(WRITE "${POU_REGISTRY}" "// Auto-generated by CMake - DO NOT EDIT\n")
file(APPEND "${POU_REGISTRY}" "#include \"rt_plc.h\"\n#include \"rt_runtime.h\"\nusing namespace rt_plc;\n\n")

set(POU_EXTERNS "")
set(POU_CALLS "")
foreach(F ${GEN_POU_FILES})
    file(STRINGS "${F}" REG_LINE REGEX "^void registerPOU_.*\\(POURegistry&" LIMIT_COUNT 1)
    if(REG_LINE)
        string(REGEX MATCH "registerPOU_[A-Za-z0-9_]+" FUNC_NAME "${REG_LINE}")
        set(POU_EXTERNS "${POU_EXTERNS}extern void ${FUNC_NAME}(POURegistry& reg);\n")
        set(POU_CALLS "${POU_CALLS}    ${FUNC_NAME}(reg);\n")
        message(STATUS "  found POU registration: ${FUNC_NAME}")
    endif()
endforeach()

file(APPEND "${POU_REGISTRY}" "${POU_EXTERNS}\nvoid registerAllPOUs(POURegistry& reg) {\n${POU_CALLS}}\n")

if(GEN_POU_FILES)
    add_executable(runtime
        runtime_main.cpp
        ${GEN_POU_FILES}
        ${POU_REGISTRY}
    )
    target_include_directories(runtime PRIVATE ${RT_INCLUDE_DIR})
    target_link_libraries(runtime rt_scheduler)
    message(STATUS "runtime target: found ${GEN_POU_FILES}")
else()
    message(WARNING "GEN_CPP_DIR=${GEN_CPP_DIR} is empty — no POU code to link.
    Compile ST sources first with Java compiler:
      java -cp ... Main --input file.st --output output/flat/build/file.cpp")
endif()
